_sass/post.scss
.post-container {
  display: flex;
  flex-direction: column;
  gap: 2rem;
}

.post-meta {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;

  .post-title {
    margin-bottom: .5rem;
  }

  .post-description {
    margin-top: 1rem;;
  }
}

.post-content {
  h1 {
    border-bottom: var(--default-border);
    padding-bottom: 1rem;
  }

  h1:not(:first-child) {
    margin-top: 2rem;
  }

  ul, ol {
    margin-left: 2rem;
  }

  blockquote {
    border-left: 1px solid var(--text-color);
    padding-left: 1rem;
  }

  img {
    border: var(--default-border);
    margin-top: 1rem;
  }

  ul {
    margin-left: 1.5rem;
  }
}

